{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 2227,
  "lineage": "090231bd-0bd8-abbe-c8b5-d7225d362d22",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "azure_vnet_01_vyos_01_nic_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/networkInterfaces/DualVPN-Net-01-VyOS-01-priv-NIC",
            "internal_domain_name_suffix": "thkgxcs1oc4epezriyzsccjraa.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-01",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/virtualNetworks/DualVPN-Net-01/subnets/DualVPN-Net-01-priv"
              }
            ],
            "location": "westeurope",
            "name": "DualVPN-Net-01-VyOS-01-priv-NIC",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "aslan_resource_group",
            "tags": {
              "created-by": "Terraform",
              "environment": "Test",
              "owner": "Aslan Hajiyev",
              "project": "VyOS sample VPN"
            }
          },
          "dependencies": [
            "azurerm_subnet.azure_vnet_01_priv_subnet",
            "azurerm_virtual_network.azure_vnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "azure_vnet_01_vyos_01_nic_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/networkInterfaces/DualVPN-Net-01-VyOS-01-pub-NIC",
            "internal_domain_name_suffix": "thkgxcs1oc4epezriyzsccjraa.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "external-01",
                "primary": true,
                "private_ip_address": "10.1.11.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/publicIPAddresses/DualVPN-Net-01-public-IP",
                "subnet_id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/virtualNetworks/DualVPN-Net-01/subnets/DualVPN-Net-01-pub"
              }
            ],
            "location": "westeurope",
            "name": "DualVPN-Net-01-VyOS-01-pub-NIC",
            "private_ip_address": "10.1.11.4",
            "private_ip_addresses": [
              "10.1.11.4"
            ],
            "resource_group_name": "aslan_resource_group",
            "tags": {
              "created-by": "Terraform",
              "environment": "Test",
              "owner": "Aslan Hajiyev",
              "project": "VyOS sample VPN"
            }
          },
          "dependencies": [
            "azurerm_public_ip.azure_vnet_01_public_address",
            "azurerm_subnet.azure_vnet_01_pub_subnet",
            "azurerm_virtual_network.azure_vnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "azure_vnet_01_vyos_01_pub_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/networkInterfaces/DualVPN-Net-01-VyOS-01-pub-NIC|/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/networkSecurityGroups/DualVPN-VyOS-SG",
            "network_interface_id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/networkInterfaces/DualVPN-Net-01-VyOS-01-pub-NIC",
            "network_security_group_id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/networkSecurityGroups/DualVPN-VyOS-SG"
          },
          "dependencies": [
            "azurerm_network_interface.azure_vnet_01_vyos_01_nic_pub",
            "azurerm_network_security_group.VyOS",
            "azurerm_public_ip.azure_vnet_01_public_address",
            "azurerm_subnet.azure_vnet_01_pub_subnet",
            "azurerm_virtual_network.azure_vnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "VyOS",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/networkSecurityGroups/DualVPN-VyOS-SG",
            "location": "westeurope",
            "name": "DualVPN-VyOS-SG",
            "resource_group_name": "aslan_resource_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ESP",
                "priority": 104,
                "protocol": "Esp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1194",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "OpenVPN",
                "priority": 103,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1701",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "IPSEC",
                "priority": 106,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NAT_Traversal",
                "priority": 107,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "IKE",
                "priority": 105,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "51820",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Wireguard",
                "priority": 102,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "created-by": "Terraform",
              "environment": "Test",
              "owner": "Aslan Hajiyev",
              "project": "VyOS sample VPN"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azure_vnet_01_public_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/publicIPAddresses/DualVPN-Net-01-public-IP",
            "idle_timeout_in_minutes": 30,
            "ip_address": "13.81.54.230",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "DualVPN-Net-01-public-IP",
            "resource_group_name": "aslan_resource_group",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "created-by": "Terraform",
              "environment": "Test",
              "owner": "Aslan Hajiyev",
              "project": "VyOS sample VPN"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "azure_vnet_01_vyos_01_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/routeTables/DualVPN-Net-01-VyOS-01-route",
            "location": "westeurope",
            "name": "DualVPN-Net-01-VyOS-01-route",
            "resource_group_name": "aslan_resource_group",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Default",
                "next_hop_in_ip_address": "10.1.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "created-by": "Terraform",
              "environment": "Test",
              "owner": "Aslan Hajiyev",
              "project": "VyOS sample VPN"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.azure_vnet_01_vyos_01_nic_priv",
            "azurerm_subnet.azure_vnet_01_priv_subnet",
            "azurerm_virtual_network.azure_vnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure_vnet_01_priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/virtualNetworks/DualVPN-Net-01/subnets/DualVPN-Net-01-priv",
            "name": "DualVPN-Net-01-priv",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aslan_resource_group",
            "virtual_network_name": "DualVPN-Net-01"
          },
          "dependencies": [
            "azurerm_virtual_network.azure_vnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure_vnet_01_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/virtualNetworks/DualVPN-Net-01/subnets/DualVPN-Net-01-pub",
            "name": "DualVPN-Net-01-pub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aslan_resource_group",
            "virtual_network_name": "DualVPN-Net-01"
          },
          "dependencies": [
            "azurerm_virtual_network.azure_vnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "azure_vnet_vpn_net_assosiation_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/virtualNetworks/DualVPN-Net-01/subnets/DualVPN-Net-01-priv",
            "route_table_id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/routeTables/DualVPN-Net-01-VyOS-01-route",
            "subnet_id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/virtualNetworks/DualVPN-Net-01/subnets/DualVPN-Net-01-priv"
          },
          "dependencies": [
            "azurerm_network_interface.azure_vnet_01_vyos_01_nic_priv",
            "azurerm_route_table.azure_vnet_01_vyos_01_route",
            "azurerm_subnet.azure_vnet_01_priv_subnet",
            "azurerm_virtual_network.azure_vnet_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "azure_vnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8a6bd499-705b-47bc-9331-463321093100",
            "id": "/subscriptions/e1824912-19b2-4f1c-a1f8-b3499e89d7d0/resourceGroups/aslan_resource_group/providers/Microsoft.Network/virtualNetworks/DualVPN-Net-01",
            "location": "westeurope",
            "name": "DualVPN-Net-01",
            "resource_group_name": "aslan_resource_group",
            "tags": {
              "created-by": "Terraform",
              "environment": "Test",
              "owner": "Aslan Hajiyev",
              "project": "VyOS sample VPN"
            }
          }
        }
      ]
    }
  ]
}